hphp/hack/test/typecheck/expression_trees/shapes/shape_creation_missing_field.php.exp
ERROR: File "shape_creation_missing_field.php", line 8, characters 8-22:
Invalid argument (Typing[4057])
  File "shape_creation_missing_field.php", line 8, characters 8-22:
  The field `y` is missing
  File "shape_creation_missing_field.php", line 7, characters 49-51:
  The field `y` is defined
