hphp/hack/test/typecheck/expression_trees/shapes/shape_creation_missing_field.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function g(): void {
  ExampleDsl`{
    $f = (ExampleShape<shape('x' => ExampleInt, 'y' => ExampleString)> $shape) ==> 3;
    $f(shape('x' => 2));
  }`;
}
